--- a/BaiTapLon-HCJ/product.html
+++ b/BaiTapLon-HCJ/product.html
@@ -745,53 +745,53 @@
     </main>
     <footer>
         <div class="container footer-title">
-                <div class="row">
-                    <div class="col-lg-3 col-6">
-                        <div class="row ">
-                            <div class="col-xl-3">
-                                <img src="img/truck.png" alt="">
-                            </div>
-                            <div class="col-xl-9">
-                                <h2>FREE SHIPPING</h2>
-                                <p>WORLDWIDE</p>
-                            </div>
+            <div class="row">
+                <div class="col-lg-3 col-6">
+                    <div class="row ">
+                        <div class="col-xl-3">
+                            <img src="img/truck.png" alt="">
+                        </div>
+                        <div class="col-xl-9">
+                            <h2>FREE SHIPPING</h2>
+                            <p>WORLDWIDE</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-6">
-                        <div class="row ">
-                            <div class="col-xl-3">
-                                <img src="img/headphone.png" alt="">
-                            </div>
-                            <div class="col-xl-9">
-                                <h2>24X7</h2>
-                                <p>CUSTOMER SUPPORT</p>
-                            </div>
+                </div>
+                <div class="col-lg-3 col-6">
+                    <div class="row ">
+                        <div class="col-xl-3">
+                            <img src="img/headphone.png" alt="">
+                        </div>
+                        <div class="col-xl-9">
+                            <h2>24X7</h2>
+                            <p>CUSTOMER SUPPORT</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-6">
-                        <div class="row ">
-                            <div class="col-xl-3">
-                                <img src="img/return.png" alt="">
-                            </div>
-                            <div class="col-xl-9">
-                                <h2>RETURNS</h2>
-                                <p>AND EXCHANGE</p>
-                            </div>
+                </div>
+                <div class="col-lg-3 col-6">
+                    <div class="row ">
+                        <div class="col-xl-3">
+                            <img src="img/return.png" alt="">
+                        </div>
+                        <div class="col-xl-9">
+                            <h2>RETURNS</h2>
+                            <p>AND EXCHANGE</p>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-6">
-                        <div class="row ">
-                            <div class="col-xl-3">
-                                <img src="img/phone.png" alt="">
-                            </div>
-                            <div class="col-xl-9">
-                                <h2>HOTLINE</h2>
-                                <p>+(888) 888-8888</p>
-                            </div>
+                </div>
+                <div class="col-lg-3 col-6">
+                    <div class="row ">
+                        <div class="col-xl-3">
+                            <img src="img/phone.png" alt="">
+                        </div>
+                        <div class="col-xl-9">
+                            <h2>HOTLINE</h2>
+                            <p>+(888) 888-8888</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         <div class="container footer-content">
             <div class="row">
                 <div class="col-xl-3 info">
@@ -824,34 +824,34 @@
                 <div class="col-xl-2 center-link">
                     <h3>INFOMATION</h3>
                     <ul>
-                        <li><a href="">Site Map</a></li>
-                        <li><a href="">Search Terms</a></li>
-                        <li><a href="">Advanced Search</a></li>
-                        <li><a href="">About Us</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href="">Suppliers</a></li>
+                        <li><a href="404-page.html">Site Map</a></li>
+                        <li><a href="404-page.html">Search Terms</a></li>
+                        <li><a href="404-page.html">Advanced Search</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="404-page.html">Suppliers</a></li>
                     </ul>
                 </div>
                 <div class="col-xl-3 center-link">
                     <h3>STYLE ADVISOR</h3>
                     <ul>
-                        <li><a href="">Your Account</a></li>
-                        <li><a href="">Infomation</a></li>
-                        <li><a href="">Addresses</a></li>
-                        <li><a href="">Discount</a></li>
-                        <li><a href="">Orders History</a></li>
-                        <li><a href="">Additional Infomation</a></li>
+                        <li><a href="my-account.html">Your Account</a></li>
+                        <li><a href="404-page.html">Infomation</a></li>
+                        <li><a href="404-page.html">Addresses</a></li>
+                        <li><a href="404-page.html">Discount</a></li>
+                        <li><a href="404-page.html">Orders History</a></li>
+                        <li><a href="404-page.html">Additional Infomation</a></li>
                     </ul>
                 </div>
                 <div class="col-xl-2 center-link">
                     <h3>QUICK LINKS</h3>
                     <ul>
-                        <li><a href="">Blog</a></li>
-                        <li><a href="">FAQs</a></li>
-                        <li><a href="">Payment</a></li>
-                        <li><a href="">Shipment</a></li>
-                        <li><a href="">Where is my order?</a></li>
-                        <li><a href="">Return policy</a></li>
+                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="FAQ.html">FAQs</a></li>
+                        <li><a href="404-page.html">Payment</a></li>
+                        <li><a href="404-page.html">Shipment</a></li>
+                        <li><a href="404-page.html">Where is my order?</a></li>
+                        <li><a href="404-page.html">Return policy</a></li>
                     </ul>
                 </div>
                 <div class="col-xl-2 center-link">
